--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<a href="./week2/week2.html">第二個禮拜的William履歷</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>homework</title>
+
+    <style>
+        li {
+            padding-block: 8px;
+            font-size: 20px;
+        }
+    </style>
+</head>
+
+<body>
+
+    <h1>Lisa Shark の 每周交付</h1>
+
+    <ul>
+        <li><a href="./week2/week2.html">第二個禮拜的William履歷</a></li>
+        <li><a href="./week3/glasses.html">第三個禮拜的眼鏡首頁</a></li>
+    </ul>
+
+
+</body>
+
+</html>
