--- a/week3/glasses.html
+++ b/week3/glasses.html
@@ -94,33 +94,33 @@
         <div class="container">
           <h2 class="darkRed">經典系列鏡框</h2>
           <div class="gridGroup flex">
-            <div class="card">
-              <div class="imgBox">
+            <a class="card">
+              <div class="imgBox hover">
                 <img
                   src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
                   alt="OPTICAL"
                 />
               </div>
               <h3 class="red">OPTICAL</h3>
-            </div>
-            <div class="card">
-              <div class="imgBox">
+            </a>
+            <a class="card">
+              <div class="imgBox hover">
                 <img
                   src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
                   alt="SUNGLASSES"
                 />
               </div>
               <h3 class="red">SUNGLASSESL</h3>
-            </div>
-            <div class="card">
-              <div class="imgBox">
+            </a>
+            <a class="card">
+              <div class="imgBox hover">
                 <img
                   src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
                   alt="FUNCTIONAL"
                 />
               </div>
               <h3 class="red">FUNCTIONAL</h3>
-            </div>
+            </a>
           </div>
         </div>
       </section>
