--- a/week3/glasses.html
+++ b/week3/glasses.html
@@ -1,129 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../week3/scss/style.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <header class="bg-red">
-      <div class="container flex">
-        <div class="imgBox logo">
-          <a href="../week3/glasses.html"
-            ><img
-              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
-              alt="logo"
-          /></a>
-        </div>
-        <ul class="flex">
-          <li><a class="dark-bg" href="">系列鏡框</a></li>
-          <li><a class="dark-bg" href="">門市據點</a></li>
-          <li><a class="dark-bg" href="">部落格</a></li>
-          <li><a class="dark-bg" href="">常見問題</a></li>
-        </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../week3/scss/style.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <header class="bg-red">
+    <div class="container flex">
+      <div class="imgBox logo">
+        <a href="../week3/glasses.html"><img
+            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true"
+            alt="logo" /></a>
       </div>
-    </header>
-    <main class="home">
-      <section class="kvBanner darkRed">
-        <div class="container">
-          <h2>Promise-Desert 2020 早春系列</h2>
-          <h1>看得清，才能看得遠</h1>
-          <div class="btn bg-red white">
-            <a class="dark-bg" href="">立即購買</a>
-          </div>
+      <ul class="flex">
+        <li><a class="dark-bg" href="">系列鏡框</a></li>
+        <li><a class="dark-bg" href="">門市據點</a></li>
+        <li><a class="dark-bg" href="">部落格</a></li>
+        <li><a class="dark-bg" href="">常見問題</a></li>
+      </ul>
+    </div>
+  </header>
+  <main class="page-home">
+    <section class="home-kvBanner darkRed">
+      <div class="container">
+        <h2>Promise-Desert 2020 早春系列</h2>
+        <h1>看得清，才能看得遠</h1>
+        <div class="btn bg-red white">
+          <a class="dark-bg" href="">立即購買</a>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="special pdb-80-40m bg-pink">
-        <div class="container">
-          <h2 class="darkRed">用專業的心，做專業的事</h2>
-          <div class="gridGruop flex">
-            <div class="card">
-              <div class="imgBox">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-1.png?raw=true"
-                  alt="icon"
-                />
-              </div>
-              <h3 class="darkRed">單一價格</h3>
-              <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+    <section class="home-special pdb-80-40m bg-pink">
+      <div class="container">
+        <h2 class="darkRed">用專業的心，做專業的事</h2>
+        <div class="gridGruop flex">
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-1.png?raw=true"
+                alt="icon" />
             </div>
-            <div class="card">
-              <div class="imgBox">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true"
-                  alt="icon"
-                />
-              </div>
-              <h3 class="darkRed">20 分鐘即可取件</h3>
-              <p>
-                為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快
-                20 分鐘即可完成。
-              </p>
+            <h3 class="darkRed">單一價格</h3>
+            <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+          </div>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-2.png?raw=true"
+                alt="icon" />
             </div>
-            <div class="card">
-              <div class="imgBox">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-3.png?raw=true"
-                  alt="icon"
-                />
-              </div>
-              <h3 class="darkRed">安心售後服務</h3>
-              <p>
-                我們提供長達 120
-                天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。
-              </p>
+            <h3 class="darkRed">20 分鐘即可取件</h3>
+            <p>
+              為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快
+              20 分鐘即可完成。
+            </p>
+          </div>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section2-3.png?raw=true"
+                alt="icon" />
             </div>
-            <div class="card">
-              <div class="imgBox">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-sectioin2-4.png?raw=true"
-                  alt="icon"
-                />
-              </div>
-              <h3 class="darkRed">關於鏡片</h3>
-              <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+            <h3 class="darkRed">安心售後服務</h3>
+            <p>
+              我們提供長達 120
+              天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。
+            </p>
+          </div>
+          <div class="card">
+            <div class="imgBox">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-sectioin2-4.png?raw=true"
+                alt="icon" />
             </div>
+            <h3 class="darkRed">關於鏡片</h3>
+            <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="classic pdb-80-40m">
-        <div class="container">
-          <h2 class="darkRed">經典系列鏡框</h2>
-          <div class="gridGroup flex">
-            <a class="card">
-              <div class="imgBox hover">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
-                  alt="OPTICAL"
-                />
-              </div>
-              <h3 class="red">OPTICAL</h3>
-            </a>
-            <a class="card">
-              <div class="imgBox hover">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
-                  alt="SUNGLASSES"
-                />
-              </div>
-              <h3 class="red">SUNGLASSESL</h3>
-            </a>
-            <a class="card">
-              <div class="imgBox hover">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
-                  alt="FUNCTIONAL"
-                />
-              </div>
-              <h3 class="red">FUNCTIONAL</h3>
-            </a>
-          </div>
+    <section class="home-classic pdb-80-40m">
+      <div class="container">
+        <h2 class="darkRed">經典系列鏡框</h2>
+        <div class="gridGroup flex">
+          <a class="card">
+            <div class="imgBox hover">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
+                alt="OPTICAL" />
+            </div>
+            <h3 class="red">OPTICAL</h3>
+          </a>
+          <a class="card">
+            <div class="imgBox hover">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
+                alt="SUNGLASSES" />
+            </div>
+            <h3 class="red">SUNGLASSESL</h3>
+          </a>
+          <a class="card">
+            <div class="imgBox hover">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
+                alt="FUNCTIONAL" />
+            </div>
+            <h3 class="red">FUNCTIONAL</h3>
+          </a>
         </div>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+
+    <section class="home-cobranding pdb-80-40m">
+      <div class="container">
+        <h2>聯名設計鏡框</h2>
+        <div class="flex">
+          <a href="" class="card">
+            <picture class="imgBox">
+              <source
+                srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true"
+                media="(min-width:576px)">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1-sm.png?raw=true"
+                alt="DOUBLE A+">
+            </picture>
+            <div class="textBox red">DOUBLE A+</div>
+          </a>
+          <a href="" class="card">
+            <picture class="imgBox">
+              <source
+                srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true"
+                media="(min-width:576px)">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2-sm.png?raw=true"
+                alt="DOUBLE A+">
+            </picture>
+            <div class="textBox red">YOUTH</div>
+          </a>
+        </div>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
