--- a/week3/glasses.html
+++ b/week3/glasses.html
@@ -203,9 +203,9 @@
       </div>
     </section>
 
-    <section class="home-contact pdb-80-40m">
+    <section class="home-contact pdb-80-40m bg-pink">
       <div class="container">
-        <h2>聯絡我們</h2>
+        <h2 class="darkRed">聯絡我們</h2>
         <p>
           我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。
         </p>
@@ -221,37 +221,43 @@
           </label>
           <label>意見反應
             <textarea name="" id="" placeholder="請輸入您的意見"></textarea>
-            </labelr=>
-            <label>我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
-              <input type="checkbox" />
-            </label>
+          </label>
+          <label>我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+            <input type="checkbox" />
+          </label>
         </form>
-        <button type="button">確認送出</button>
+        <button type="button" class="bg-red white block">確認送出</button>
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="bg-red color">
     <div class="container">
-      <div class="flex">
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-        <div class="imgGroup">
-          <div class="imgBox"><a href=""><img src="" alt="fb"></a></div>
-          <div class="imgBox"><a href=""></a><img src="" alt="ig"></a></div>
-          <div class="imgBox"><a href=""></a><img src="" alt="line"></a></div>
+      <div class="upperFooter flex">
+        <div class="linkGroup">
+          <ul class="flex">
+            <li><a href="" class="dark-bg">首頁</a></li>
+            <li><a href="" class="dark-bg">系列鏡框</a></li>
+            <li><a href="" class="dark-bg">門市據點</a></li>
+            <li><a href="" class="dark-bg">部落格</a></li>
+            <li><a href="" class="dark-bg">常見問題</a></li>
+          </ul>
+          <a href="" class="dark-bg block"><span class="material-symbols-rounded">call</span>0800-000-000</a>
+          <a href="" class="dark-bg block"><span class="material-symbols-rounded">mail</span> glasses@business.com</a>
+        </div>
+
+
+        <div class="imgGrid flex">
+          <div class="imgBox"><a href=""><img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                alt="fb"></a></div>
+          <div class="imgBox"><a href=""></a><img
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+              alt="ig"></a></div>
+          <div class="imgBox"><a href=""></a><img
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+              alt="line"></a></div>
         </div>
       </div>
-      <a href="">
-        <p>0800-000-000</p>
-      </a>
-      <a href="">
-        <p>glasses@business.com</p>
-      </a>
 
     </div>
   </footer>
