--- a/week3/glasses.html
+++ b/week3/glasses.html
@@ -233,7 +233,7 @@
   <footer class="bg-red color">
     <div class="container">
       <div class="upperFooter flex">
-        <div class="linkGroup">
+        <div class="linkGroup flex">
           <ul class="flex">
             <li><a href="" class="dark-bg">首頁</a></li>
             <li><a href="" class="dark-bg">系列鏡框</a></li>
@@ -241,22 +241,29 @@
             <li><a href="" class="dark-bg">部落格</a></li>
             <li><a href="" class="dark-bg">常見問題</a></li>
           </ul>
-          <a href="" class="dark-bg block"><span class="material-symbols-rounded">call</span>0800-000-000</a>
-          <a href="" class="dark-bg block"><span class="material-symbols-rounded">mail</span> glasses@business.com</a>
+          <div class="imgGrid flex">
+            <div class="imgBox"><a href=""><img
+                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+                  alt="fb"></a></div>
+            <div class="imgBox"><a href=""></a><img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+                alt="ig"></a></div>
+            <div class="imgBox"><a href=""></a><img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+                alt="line"></a></div>
+          </div>
+        </div>
+        <a href="" class="dark-bg block contactBtn"><span class="material-symbols-rounded">call</span>0800-000-000</a>
+        <a href="" class="dark-bg block contactBtn"><span class="material-symbols-rounded">mail</span>
+          glasses@business.com</a>
+      </div>
+
+      <div class="bottomFooter flex white">
+        <p class="copyright">Copyright © 2020 Glasses.All rights reserved.</p>
+        <div>
+          <a href="#" class="privacy dark-bg">隱私權政策</a><a href="#" class="dark-bg">服務條款</a>
         </div>
 
-
-        <div class="imgGrid flex">
-          <div class="imgBox"><a href=""><img
-                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
-                alt="fb"></a></div>
-          <div class="imgBox"><a href=""></a><img
-              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
-              alt="ig"></a></div>
-          <div class="imgBox"><a href=""></a><img
-              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
-              alt="line"></a></div>
-        </div>
       </div>
 
     </div>
