--- a/week3/glasses.html
+++ b/week3/glasses.html
@@ -253,9 +253,10 @@
                 alt="line"></a></div>
           </div>
         </div>
+        <div class="contactGroup">
         <a href="" class="dark-bg block contactBtn"><span class="material-symbols-rounded">call</span>0800-000-000</a>
         <a href="" class="dark-bg block contactBtn"><span class="material-symbols-rounded">mail</span>
-          glasses@business.com</a>
+          glasses@business.com</a></div>
       </div>
 
       <div class="bottomFooter flex white">
