--- a/week3/glasses.html
+++ b/week3/glasses.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0,user-scalable=no,maximun-scale=1.0,minimum-scale=1.0" />
   <link rel="stylesheet" href="../week3/scss/style.css" />
   <title>Document</title>
 </head>
@@ -17,10 +18,10 @@
             alt="logo" /></a>
       </div>
       <ul class="flex">
-        <li><a class="dark-bg" href="">系列鏡框</a></li>
-        <li><a class="dark-bg" href="">門市據點</a></li>
-        <li><a class="dark-bg" href="">部落格</a></li>
-        <li><a class="dark-bg" href="">常見問題</a></li>
+        <li><a class="dark-bg" href="#">系列鏡框</a></li>
+        <li><a class="dark-bg" href="#">門市據點</a></li>
+        <li><a class="dark-bg" href="#">部落格</a></li>
+        <li><a class="dark-bg" href="#">常見問題</a></li>
       </ul>
     </div>
   </header>
@@ -30,7 +31,7 @@
         <h2>Promise-Desert 2020 早春系列</h2>
         <h1>看得清，才能看得遠</h1>
         <div class="btn bg-red white">
-          <a class="dark-bg" href="">立即購買</a>
+          <a class="dark-bg" href="#">立即購買</a>
         </div>
       </div>
     </section>
@@ -121,22 +122,22 @@
       <div class="container">
         <h2 class="white">聯名設計鏡框</h2>
         <div class="flex">
-          <a href="" class="card">
+          <a href="#" class="card">
             <picture class="imgBox">
               <source srcset="
                     https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true
-                  " media="(min-width:576px)" />
+                  " media="(min-width:767px)" />
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1-sm.png?raw=true"
                 alt="DOUBLE A+" />
             </picture>
             <div class="textBox red">DOUBLE A+</div>
           </a>
-          <a href="" class="card">
+          <a href="#" class="card">
             <picture class="imgBox">
               <source srcset="
                     https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true
-                  " media="(min-width:576px)" />
+                  " media="(min-width:767px)" />
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2-sm.png?raw=true"
                 alt="DOUBLE A+" />
@@ -235,28 +236,30 @@
       <div class="upperFooter flex">
         <div class="linkGroup flex">
           <ul class="flex">
-            <li><a href="" class="dark-bg">首頁</a></li>
-            <li><a href="" class="dark-bg">系列鏡框</a></li>
-            <li><a href="" class="dark-bg">門市據點</a></li>
-            <li><a href="" class="dark-bg">部落格</a></li>
-            <li><a href="" class="dark-bg">常見問題</a></li>
+            <li><a href="#" class="dark-bg">首頁</a></li>
+            <li><a href="#" class="dark-bg">系列鏡框</a></li>
+            <li><a href="#" class="dark-bg">門市據點</a></li>
+            <li><a href="#" class="dark-bg">部落格</a></li>
+            <li><a href="#" class="dark-bg">常見問題</a></li>
           </ul>
           <div class="imgGrid flex">
-            <div class="imgBox"><a href=""><img
+            <div class="imgBox"><a href="#"><img
                   src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
                   alt="fb"></a></div>
-            <div class="imgBox"><a href=""></a><img
-                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
-                alt="ig"></a></div>
-            <div class="imgBox"><a href=""></a><img
-                src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
-                alt="line"></a></div>
+            <div class="imgBox"><a href="#"><img
+                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+                  alt="ig"></a></div>
+            <div class="imgBox"><a href="#"><img
+                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+                  alt="line"></a></div>
           </div>
         </div>
         <div class="contactGroup">
-        <a href="" class="dark-bg block contactBtn"><span class="material-symbols-rounded">call</span>0800-000-000</a>
-        <a href="" class="dark-bg block contactBtn"><span class="material-symbols-rounded">mail</span>
-          glasses@business.com</a></div>
+          <a href="#" class="dark-bg block contactBtn"><span
+              class="material-symbols-rounded">call</span>0800-000-000</a>
+          <a href="#" class="dark-bg block contactBtn"><span class="material-symbols-rounded">mail</span>
+            glasses@business.com</a>
+        </div>
       </div>
 
       <div class="bottomFooter flex white">
