--- a/week3/glasses.html
+++ b/week3/glasses.html
@@ -123,7 +123,7 @@
         <h2 class="white">聯名設計鏡框</h2>
         <div class="flex">
           <a href="#" class="card">
-            <picture class="imgBox">
+            <picture class="imgBox hover">
               <source srcset="
                     https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true
                   " media="(min-width:767px)" />
@@ -134,7 +134,7 @@
             <div class="textBox red">DOUBLE A+</div>
           </a>
           <a href="#" class="card">
-            <picture class="imgBox">
+            <picture class="imgBox hover">
               <source srcset="
                     https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true
                   " media="(min-width:767px)" />
