--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <ul>
         <li><a href="./week2/week2.html">第二個禮拜的William履歷</a></li>
         <li><a href="./week3/glasses.html">第三個禮拜的眼鏡首頁</a></li>
+        <li><a href="https://lisashark.github.io/six-vite/">第四個禮拜的眼鏡們</a></li>
+        <li><a href="./week5/form.html">第五個禮拜的表單</a></li>
     </ul>
 
 
