--- a/week5/form.html
+++ b/week5/form.html
@@ -10,20 +10,23 @@
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-<div class="row all">
-    <nav class="col flex-column">
+<div class="d-flex layout">
+    <nav class="nav flex-column mx-0">
         <div class="logo"><img src="./asset/image/logo-ANSWER.svg" alt=""></div>
-        <div class="menuBox row">
-            <span class="material-symbols-rounded col-1">insert_chart</span>
-            <p class="col-11">Dashboard</p>
-        </div>
-
-
+        <ul class="flex-column list-unstyled">
+            <li><a href="#">
+                    <div class="d-flex menuBox">
+                        <span class="material-symbols-rounded">insert_chart</span>
+                        <p class="mb-0">Dashboard</p>
+                    </div>
+                </a></li>
+        </ul>
 
     </nav>
-    <div class="col"></div>
+    <div class="d-flex"></div>
 
 </div>
+
 
 
 
