--- a/week5/form.html
+++ b/week5/form.html
@@ -12,15 +12,61 @@
 </head>
 <div class="d-flex layout">
     <nav class="nav flex-column mx-0">
-        <div class="logo"><img src="./asset/image/logo-ANSWER.svg" alt=""></div>
+        <div class="logo mx-main"><img src="./asset/image/logo-ANSWER.svg" alt=""></div>
         <ul class="flex-column list-unstyled">
             <li><a href="#">
-                    <div class="d-flex menuBox">
+                    <div class="d-flex menuBox mx-main">
                         <span class="material-symbols-rounded">insert_chart</span>
                         <p class="mb-0">Dashboard</p>
                     </div>
-                </a></li>
+                </a>
+            </li>
+            <li><a href="#">
+                    <div class="d-flex menuBox mx-main">
+                        <span class="material-symbols-rounded">forum</span>
+                        <p class="mb-0">Question</p>
+                    </div>
+                </a>
+            </li>
+            <li><a href="#">
+                    <div class="d-flex menuBox mx-main">
+                        <span class="material-symbols-rounded">assignment</span>
+                        <p class="mb-0">Assignment</p>
+                    </div>
+                </a>
+            </li>
+            <li><a href="#">
+                    <div class="d-flex menuBox mx-main">
+                        <span class="material-symbols-rounded">video_library</span>
+                        <p class="mb-0">Course</p>
+                    </div>
+                </a>
+            </li>
+            <li><a href="#">
+                    <div class="d-flex menuBox mx-main">
+                        <span class="material-symbols-rounded">person</span>
+                        <p class="mb-0">Admin</p>
+                    </div>
+                </a>
+            </li>
+            <li><a href="#">
+                    <div class="d-flex menuBox mx-main">
+                        <span class="material-symbols-rounded">settings</span>
+                        <p class="mb-0">Settings</p>
+                    </div>
+                </a>
+            </li>
         </ul>
+
+        <div class="accountInfo d-flex mx-main">
+            <div class="imgBox"> <img
+                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week5/andychen.jpeg?raw=true"
+                    class="img-fluid"> </div>
+            <div class="info">
+                <p>Andy Chen</p>
+                <p>andy0401@mail.com</p>
+            </div>
+        </div>
 
     </nav>
     <div class="d-flex"></div>
