--- a/week5/form.html
+++ b/week5/form.html
@@ -10,65 +10,78 @@
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-<div class="d-flex layout">
-
-    <nav class="nav flex-column mx-0">
-        <div class="logo mx-main"><img src="./asset/image/logo-ANSWER.svg" alt=""></div>
-        <ul class="flex-column list-unstyled">
-            <li><a href="#">
-                    <div class="d-flex menuBox mx-main">
-                        <span class="material-symbols-rounded">insert_chart</span>
-                        <p class="mb-0">Dashboard</p>
-                    </div>
-                </a>
-            </li>
-            <li><a href="#">
-                    <div class="d-flex menuBox mx-main">
-                        <span class="material-symbols-rounded">forum</span>
-                        <p class="mb-0">Question</p>
-                    </div>
-                </a>
-            </li>
-            <li><a href="#">
-                    <div class="d-flex menuBox mx-main">
-                        <span class="material-symbols-rounded">assignment</span>
-                        <p class="mb-0">Assignment</p>
-                    </div>
-                </a>
-            </li>
-            <li><a href="#">
-                    <div class="d-flex menuBox mx-main">
-                        <span class="material-symbols-rounded">video_library</span>
-                        <p class="mb-0">Course</p>
-                    </div>
-                </a>
-            </li>
-            <li><a href="#">
-                    <div class="d-flex menuBox mx-main">
-                        <span class="material-symbols-rounded">person</span>
-                        <p class="mb-0">Admin</p>
-                    </div>
-                </a>
-            </li>
-            <li><a href="#">
-                    <div class="d-flex menuBox mx-main">
-                        <span class="material-symbols-rounded">settings</span>
-                        <p class="mb-0">Settings</p>
-                    </div>
-                </a>
-            </li>
-        </ul>
-        <div class="accountInfo d-flex mx-main">
+<div class="d-flex layout justify-content-between">
+    <nav class="navArea d-flex flex-column py-main mx-0 justify-content-between">
+        <div>
+            <div class="logo mx-main"><img src="./asset/image/logo-ANSWER.svg" alt=""></div>
+            <ul class="flex-column list-unstyled fw-bold">
+                <li><a class="d-block" href="#">
+                        <div class="d-flex menuBox mx-main">
+                            <span class="material-symbols-rounded fs-1">insert_chart</span>
+                            <p>Dashboard</p>
+                        </div>
+                    </a>
+                </li>
+                <li><a class="d-block" href="#">
+                        <div class="d-flex menuBox mx-main">
+                            <span class="material-symbols-rounded fs-1">forum</span>
+                            <p>Question</p>
+                        </div>
+                    </a>
+                </li>
+                <li><a class="d-block active" href="#">
+                        <div class="d-flex menuBox mx-main">
+                            <span class="material-symbols-rounded fs-1">assignment</span>
+                            <p>Assignment</p>
+                        </div>
+                    </a>
+                </li>
+                <li><a class="d-block" href="#">
+                        <div class="d-flex menuBox mx-main">
+                            <span class="material-symbols-rounded fs-1">video_library</span>
+                            <p>Course</p>
+                        </div>
+                    </a>
+                </li>
+                <li><a class="d-block" href="#">
+                        <div class="d-flex menuBox mx-main">
+                            <span class="material-symbols-rounded fs-1">person</span>
+                            <p>Admin</p>
+                        </div>
+                    </a>
+                </li>
+                <li><a class="d-block" href="#">
+                        <div class="d-flex menuBox mx-main">
+                            <span class="material-symbols-rounded fs-1">settings</span>
+                            <p>Settings</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="accountInfo d-flex align-items-center mx-main">
             <div class="imgBox"> <img
                     src="https://github.com/hexschool/2022-web-layout-training/blob/main/week5/andychen.jpeg?raw=true"
                     class="img-fluid"> </div>
             <div class="info">
-                <p>Andy Chen</p>
-                <p>andy0401@mail.com</p>
+                <p class="fw-bold">Andy Chen</p>
+                <p class="fs-4">andy0401@mail.com</p>
             </div>
         </div>
     </nav>
-    <div class="d-flex p-1">555</div>
+    <div class="px-main py-main flex-fill container-fluid">
+        <div class="row">
+
+        </div>
+
+        <div class="row">
+            <div class="col-4">55</div>
+            <div class="col-8">77</div>
+        </div>
+
+
+
+    </div>
 </div>
 
 
