--- a/week5/form.html
+++ b/week5/form.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,user-scalable=yes,maximun-scale=1.0,minimum-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-<div class="d-flex layout justify-content-between">
+<div class="d-flex layout">
     <nav class="navArea d-flex flex-column py-main mx-0 justify-content-between">
         <div>
             <div class="logo mx-main"><img src="./asset/image/logo-ANSWER.svg" alt=""></div>
@@ -69,25 +67,31 @@
             </div>
         </div>
     </nav>
-    <div class="px-main py-main flex-fill container-fluid">
-        <div class="row">
-            <div class="">
-                <h1>Assignment</h1> <select name="" id="">All Courses</select>
+    <div>
+        <div class="flex-fill container-fluid">
+            <div class="row">
+                <div class="col-12 d-flex justify-content-between px-main py-main">
+                    <div class="d-flex align-items-center">
+                        <h1 class="fw-bold fs-1 mb-0">Assignment</h1> <select class="fw-bold" name="" id="">
+                            <option value="All Courses">All Courses</option>
+                        </select>
+                    </div>
+                    <div class="btnGroup d-flex"><button><span
+                                class="material-symbols-rounded">search</span></button><button><span
+                                class="material-symbols-rounded">notifications_active</span></button></div>
+                </div>
             </div>
-            <div class="btnGroup"><button></button><button></button></div>
+
+
+            <div class="row">
+                <div class="col-4">55</div>
+                <div class="col-8">77</div>
+            </div>
+
+
         </div>
-
-        <div class="row">
-            <div class="col-4">55</div>
-            <div class="col-8">77</div>
-        </div>
-
-
-
     </div>
 </div>
-
-
 
 
 
